--- a/src/Luban.Protobuf/Luban.Protobuf.csproj
+++ b/src/Luban.Protobuf/Luban.Protobuf.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Luban.Core\Luban.Core.csproj" />
+      <ProjectReference Include="..\Luban.CSharp\Luban.CSharp.csproj" />
       <ProjectReference Include="..\Luban.DataTarget.Builtin\Luban.DataTarget.Builtin.csproj" />
     </ItemGroup>
 
